changes in class legend

--- a/P02/style.css
+++ b/P02/style.css
@@ -14,5 +14,40 @@ body {
     height: 100vh;
     font-family: 'Lato', sans-serif;
     margin: 0;
+}
+
+.movie-container {
+    margin: 20px 0;
+}
+
+.movie-container select {
+    background-color: white ;
+    border: 0;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-left: 10px;
+    padding: 5px 15px 5px 15px;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+
+}
+
+.seat {
+    background-color:darkgray;
+    height: 12px;
+    width: 15px;
+    margin: 3px;
+    border-top-left-radius: 10px;
+    border-top-right-radius:10px;
+}
+
+.seat.selected {
+    background-color: darkgreen;
+}
+
+.row {
+    display: flex;
+
 
 }
