--- a/P02/style.css
+++ b/P02/style.css
@@ -43,11 +43,80 @@ body {
 }
 
 .seat.selected {
-    background-color: darkgreen;
+    background-color: aqua;
+}
+
+.seat.occupied {
+    background-color: white;
+}
+
+.seat:nth-of-type(2) {
+    margin-right: 20px;
+}
+
+.seat:nth-last-of-type(2) {
+    margin-left: 20px;
+}
+
+.seat:not(.occupied):hover {
+    cursor: pointer;
+    transform: scale(1.5);
+   
+}
+
+.legend {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 2px;
+    border-radius: 5px;
+    color: lightgray;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.legend li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+}
+
+.legend li small {
+    margin-left: 3px;
+    
+}
+ 
+.legend .seat:not(.occupied):hover {
+    cursor: default;
+    transform: scale(1);
+
+}
+
+.container {
+    perspective: 1000px;
+    margin-bottom: 30px;
 }
 
 .row {
     display: flex;
 
+}
 
+.screen {
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    margin: 15px 0;
+    transform: rotateX(-45deg);
+    border-radius: 5px;
+    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7); 
+
+}
+
+.p.text {
+    margin: 5px 0;
+}
+
+.p.text span {
+    color: aqua;
 }
