--- a/P-008/style.css
+++ b/P-008/style.css
@@ -29,7 +29,13 @@ body {
 
 
 input, button {
-    border: 1px;
+    border: 1px solid white;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    font-size: 18px;
+    padding: 5px 7px;
+    margin: 0%;
+
 }
 
 
@@ -43,8 +49,8 @@ input[type='text'] {
     cursor: pointer;
     border-left: 0;
     border-radius: 0;
+    border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
     
 }
 
@@ -52,6 +58,12 @@ input[type='text'] {
     cursor: pointer;
     margin-left: 20px;
     border-top-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     
+}
+
+@media (max-width: 500px) {
+    input[type='text'] {
+        width: 100px;
+    }   
 }
