--- a/P-008/style.css
+++ b/P-008/style.css
@@ -62,8 +62,51 @@ input[type='text'] {
     
 }
 
+.meals {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+
+.meal {
+    cursor: pointer;
+    position: relative;
+    width: 180px;
+    height: 180px;
+    text-align: center;
+
+}
+
+.meal img {
+    width: 100%;
+    height: 100%;
+    border: 2px solid cornsilk;
+    border-radius: 3px;
+}
+
+.meal-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 450ms;
+}
+
+.meal:hover .meal-info {
+    opacity: 1;
+}
+
+
 @media (max-width: 500px) {
     input[type='text'] {
-        width: 100px;
+        width: 100%;
+
     }   
 }
