--- a/P_019/style.css
+++ b/P_019/style.css
@@ -8,10 +8,10 @@
 
 }
 body {
-    background-image: url("beauty.jpg");
+    background-image: url("new glaxy.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center ;
+    background-position: center;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -26,7 +26,7 @@ body {
     left: 0%;
     right: 0%;
     bottom: 0%;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.1);
     width: 100;
     height: 100;
     z-index: -1;
@@ -52,7 +52,7 @@ body {
 .title span {
     display: block;
     font-size: 6rem;
-    letter-spacing: 2rem;
+    letter-spacing: 3rem;
 }
 
 .wrapper {
@@ -61,8 +61,45 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     min-height: 100vh;
-    
 
+}
+.countdown-container > div{
+    margin: 0;
+    text-align: center;
+    border: 0px solid white;
+    padding: 0px 20px;
+    border-radius: 12px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    color: white;
+    min-width: 150px;
+
+}
+@media (max-width:992px) {
+    .countdown-container > div{
+        margin: 0 1rem;
+    }
+}
+@media (max-width:992px) {
+    .countdown-container {
+        flex-wrap: wrap;
+    }
+}
+@media (max-width:767px) {
+    .countdown-container > div{
+        margin: 1rem auto;
+        max-width: 150px;
+    }
+}
+.title {
+    font-size: 2rem;
+    line-height: 3.5rem;
+    margin: 10px 0px;
+
+}
+.title span {
+    font-size: 3rem;
+    letter-spacing: 1rem;
 }
 
 
